--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 github:
-  another_url: https://raw.githubusercontent.com/qschweitzer/Powershell-Web-GUI-Builder/master/PWF-Functions.ps1
+  zip_url: https://raw.githubusercontent.com/qschweitzer/Powershell-Web-GUI-Builder/master/PWF-Functions.ps1
