--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
+show_downloads: true
 github:
   zip_url: https://raw.githubusercontent.com/qschweitzer/Powershell-Web-GUI-Builder/master/PWF-Functions.ps1
